namespace MTG_Emulator.Cards
{
    public class CardFaceInfo
    {
        public string Name { get; set; } = string.Empty;
        // public string OracleText { get; set; } = string.Empty;
        public string ImageUri { get; set; } = string.Empty;
    }
}