namespace MTG_Emulator.Cards
{
    public class RelatedCardInfo
    {
        public int RelatedCardId { get; set; }
        public string Name { get; set; } = string.Empty;
        public string ImageUri { get; set; } = string.Empty;
    }
}